fix spacing and order of grid items2

--- a/css/info.css
+++ b/css/info.css
@@ -73,7 +73,8 @@ a {
   grid-column: 2 / 5;
   display: flex;
   flex-direction: column;
-  padding-bottom: 5em;
+  padding: 4em 5em;
+  order: 2;
 }
 
 .project-desc {
@@ -181,8 +182,8 @@ a {
   grid-column: span 8;
   width: 100%;
   height: auto;
-  margin: 2em 0;
-  padding: 4em 0;
+  margin: 2em 0 0 -1em;
+  padding: 4em 0 0 0;
 }
 
 .mockup-item {
